# ocean-mind

./: .env.local  .gitignore  404.html  README.md  docker-compose.yml  fetch_onestop.py  index.html  mkdocs.yml  noaa.ipynb  pyproject.toml
.github/workflows/: ci.yml
datasets/: __init__.py  dataset.py  fetchers.py  ncei.py  onestop.py  utils.py
docs/: WORKING_BACKWARDS.md  index.md  press_release.md  use_cases.md
ocean-mind-app/: package-lock.json  package.json
ocean_mind/: pyproject.toml
press_release/: index.html
search/: search_index.json
sls/: .env  .env.default  package-lock.json  package.json  serverless.yml
sls/lambdas/runRequestAI/: README.md  package-lock.json  package.json
sls/lambdas/runRequestAI/src/: crawl.ts  index.ts
sls/lambdas/runRequestAI/utils/: zipit.sh
sls/layers/openAI/: package-lock.json  package.json
sls/layers/openAI/utils/: zipit.sh
sls/resources/: dynamodb-table.yml  lambda-and-api-gateway.yml
sls/scripts/: build-lambdas.sh
streaming/: go.mod  main.go
use_cases/: index.html
